# idalib-mcp

./: PLAN.md  README.md  README.zh-CN.md  pyproject.toml
src/idalib_mcp/: __init__.py  api_sigworker.py  config.py  installer.py  server.py  sig_worker.py  worker.py
tests/: test_config.py  test_installer.py  test_server.py  test_worker.py
